# template-python

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/app/: main.py
